--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
 						<div class="portfolio-wrap">
 							<ul class="work-list">
 								<li class="work-box">
+									<a href="work/msi_brighter_future">
+										<div class="work-image" style="background-image:url('img/gallery/brighter_future.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">Brighter Future for Gaming - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>Brighter Future For Gaming</h3>
+										<p>Landing Page</p>
+										<ul class="role-list">
+											<li>Web Design</li>
+											<li>HTML/CSS</li>
+											<li>Javascript</li>
+										</ul>
+									</div>
+								</li>
+
+								<li class="work-box">
 									<a href="work/msi_dribble">
 										<div class="work-image" style="background-image:url('img/gallery/msi_dribble.jpg')" aria-hidden="true"></div>
 										<span class="sr-only">MSI Creator Animated Dribble Ad - Learn More</span>
@@ -108,6 +124,23 @@
 											<li>Art Direction</li>
 											<li>Video Composition</li>
 											<li>Motion Design</li>
+										</ul>
+									</div>
+								</li>
+
+
+								<li class="work-box">
+									<a href="work/msi_brand_store">
+										<div class="work-image" style="background-image:url('img/gallery/msi_brand_store.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">MSI Brand Store - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>MSI Brand Store</h3>
+										<p>E-Commerce - Amazon Vendor</p>
+										<ul class="role-list">
+											<li>Creative Direction</li>
+											<li>Branding</li>
+											<li>UI/UX</li>
 										</ul>
 									</div>
 								</li>
@@ -126,18 +159,49 @@
 										</ul>
 									</div>
 								</li>
+
 								<li class="work-box">
-									<a href="work/msi_brand_store">
-										<div class="work-image" style="background-image:url('img/gallery/msi_brand_store.jpg')" aria-hidden="true"></div>
-										<span class="sr-only">MSI Brand Store - Learn More</span>
+									<a href="work/msi_2021">
+										<div class="work-image" style="background-image:url('img/gallery/msi_2021.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">2021 MSI Graphics - Learn More</span>
 									</a>
 									<div class="work-info">
-										<h3>MSI Brand Store</h3>
-										<p>E-Commerce - Amazon Vendor</p>
+										<h3>2021 MSI Graphics</h3>
+										<p>Web & Print - Assorted</p>
 										<ul class="role-list">
-											<li>Creative Direction</li>
-											<li>Branding</li>
-											<li>UI/UX</li>
+											<li>Graphic Design</li>
+											<li>Photo Manipulation</li>
+										</ul>
+									</div>
+								</li>
+
+								<li class="work-box">
+									<a href="work/msi_optix">
+										<div class="work-image" style="background-image:url('img/gallery/msi_optix.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">MSI Optix MPG321QRF-QD - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>Optix MPG321QRF-QD</h3>
+										<p>Etailer A+ Content</p>
+										<ul class="role-list">
+											<li>Marketing</li>
+											<li>Graphic Design</li>
+											<li>Photo Manipulation</li>
+										</ul>
+									</div>
+								</li>
+
+								<li class="work-box">
+									<a href="work/msi_oled">
+										<div class="work-image" style="background-image:url('img/gallery/msi_oled.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">Creator 15 OLED Video Social Posts - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>Creator 15 OLED</h3>
+										<p>Video Social Posts</p>
+										<ul class="role-list">
+											<li>Visual Effects</li>
+											<li>Motion Graphics</li>
 										</ul>
 									</div>
 								</li>
@@ -157,49 +221,9 @@
 										</ul>
 									</div>
 								</li>
-								<li class="work-box">
-									<a href="work/msi_oled">
-										<div class="work-image" style="background-image:url('img/gallery/msi_oled.jpg')" aria-hidden="true"></div>
-										<span class="sr-only">Creator 15 OLED Video Social Posts - Learn More</span>
-									</a>
-									<div class="work-info">
-										<h3>Creator 15 OLED</h3>
-										<p>Video Social Posts</p>
-										<ul class="role-list">
-											<li>Visual Effects</li>
-											<li>Motion Graphics</li>
-										</ul>
-									</div>
-								</li>
-								<li class="work-box">
-									<a href="work/msi_2021">
-										<div class="work-image" style="background-image:url('img/gallery/msi_2021.jpg')" aria-hidden="true"></div>
-										<span class="sr-only">2021 MSI Graphics - Learn More</span>
-									</a>
-									<div class="work-info">
-										<h3>2021 MSI Graphics</h3>
-										<p>Web & Print - Assorted</p>
-										<ul class="role-list">
-											<li>Graphic Design</li>
-											<li>Photo Manipulation</li>
-										</ul>
-									</div>
-								</li>
-								<li class="work-box">
-									<a href="work/msi_optix">
-										<div class="work-image" style="background-image:url('img/gallery/msi_optix.jpg')" aria-hidden="true"></div>
-										<span class="sr-only">MSI Optix MPG321QRF-QD - Learn More</span>
-									</a>
-									<div class="work-info">
-										<h3>Optix MPG321QRF-QD</h3>
-										<p>Etailer A+ Content</p>
-										<ul class="role-list">
-											<li>Marketing</li>
-											<li>Graphic Design</li>
-											<li>Photo Manipulation</li>
-										</ul>
-									</div>
-								</li>
+
+
+
 								<li class="work-box">
 									<a href="work/msi_rent">
 										<div class="work-image" style="background-image:url('img/gallery/msi_rent.jpg')" aria-hidden="true"></div>
