--- a/work/msi_brighter_future/index.html
+++ b/work/msi_brighter_future/index.html
@@ -13,13 +13,12 @@
 		<link type="text/css" rel="stylesheet" href="../../css/work.css" />
 
 
+
 		<!--Animate Css-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 	</head>
 	<body id="project">
-
-
 
 		<header>
 			<div class="outer clearfix">
@@ -39,49 +38,48 @@
 
 
 
+
 		<main>
 			<div class="outer">
-
 				<article>
+
 					<section class="intro clearfix">
 						<div class="intro-info animate__animated animate__fadeInLeft">
 							<h2>
 								PROJECT
 							</h2>
 							<ul>
-								<li>2021 MSI Graphics<br />Web & Print - Assorted</li>
+								<li>Brighter Future<br />For Gaming</li>
 							</ul>
+
 							<h2>
 								ROLES
 							</h2>
 							<ul>
-								<li>Graphic Design</li>
-								<li>Photo Manipulation</li>
+								<li>Web Design</li>
+								<li>HTML/CSS</li>
+								<li>Javascript</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								Here is a collection of social media graphics, banners, and printed event materials I've done for MSI marketing in 2021.
-								The collection consists of marketing graphics for a variety of computer hardware product lines.
+								Brighter Future For Gaming is an online giveaway campaign launched by MSI in cooperation with Intel, PC Master Race, and
+								Blended Group. I was tasked with designing the key visual and promotion landing page.
 							</p>
 							<p>
-								Gaming product lines are portrayed in a futuristic, science-fiction tone with a sense of RGB lighting thrown in.
-								Creator product lines utilize a colorful, flat-vector aesthetic for a more modern, illustrative tone.
+								I composited the various giveaway products on a futuristic skyline backdrop. I created faux reflections
+								for product emphasis as well as to indicate cleanliness. Soft light blues carry a positive
+								tonality that suggest a utopian future.
+
 
 							</p>
 						</div>
 
 					</section>
 
-					<img src="img/banners-2.jpg" class="center-img" alt="Set of gaming product graphics." />
-					<img src="img/banners-3.jpg" class="center-img" alt="Large cooler key visual." />
-					<img src="img/banners-1.jpg" class="center-img" alt="Variety of product graphics." />
-					<img src="img/banners-4.jpg" class="center-img" alt="Creator series printed promotional materials." />
 
 
-
-
-
+					<img src="img/landing.jpg" class="center-img" alt="Brighter Future For Gaming Promotion Page" />
 
 				</article>
 
@@ -94,13 +92,9 @@
 
 
 
-
-			<!--
-			<div id="project-footer" class="clearfix">
-				<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
-				<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
-			</div>
-		-->
+		<div id="project-footer">
+			<button class="scrollToTop" onclick="pageScrollTo('#project')">Back to Top</button>
+		</div>
 
 
 		<footer>
@@ -126,35 +120,10 @@
 		<!--JS-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="js/vendor/hammer-time.min.js"></script>
+		<script src="../../js/vendor/hammer-time.min.js"></script>
 
 
 		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
-
-		<!--Swiper JS-->
-		<script src="../../js/swiper/swiper.min.js"></script>
-		<script>
-			const swiper = new Swiper('.swiper', {
-				// Optional parameters
-				direction: 'horizontal',
-				loop: true,
-
-				// If we need pagination
-				pagination: {
-					el: '.swiper-pagination',
-				},
-
-				// Navigation arrows
-				navigation: {
-					nextEl: '.swiper-button-next',
-					prevEl: '.swiper-button-prev',
-				},
-
-			});
-		</script>
-
-
-
+		<script type="text/javascript" src="../../js/site.js"></script>
 	</body>
 </html>
