--- a/work/msi_optix/index.html
+++ b/work/msi_optix/index.html
@@ -68,9 +68,9 @@
 								greater focus on Quantum Dot technology while educating consumers on key gaming features such as Console Mode and Rapid IPS.
 							</p>
 							<p>
-								For the key visual, I went with a richly colors and extruding effects to express dynamic immersion.
+								For the key visual, I went with rich colors and extruding effects to express dynamic immersion.
 								Immediately under the key visual, I added a main feature summary panel to improve the consumer shopping experience.
-								I followed with a series of comparison visuals to demonstrate the improved media experience of the Optix monitor compared to
+								I followed with a series of comparison modules to demonstrate the improved visual experience of the Optix monitor compared to
 								generic competitors.
 							</p>
 						</div>
