--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 										<p>E-Commerce - Amazon Vendor</p>
 										<ul class="role-list">
 											<li>Creative Direction</li>
+											<li>Art Direction</li>
 											<li>Branding</li>
-											<li>UI/UX</li>
 										</ul>
 									</div>
 								</li>
