--- a/work/msi_brand_store/index.html
+++ b/work/msi_brand_store/index.html
@@ -55,11 +55,10 @@
 							<h2>
 								ROLES
 							</h2>
-							<ul>
+							<ul class="role-list">
+								<li>Creative Direction</li>
+								<li>Art Direction</li>
 								<li>Branding</li>
-								<li>Copywriting</li>
-								<li>Web Design</li>
-								<li>Graphic Design</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
