--- a/work/study_play/index.html
+++ b/work/study_play/index.html
@@ -56,9 +56,10 @@
 								ROLES
 							</h2>
 							<ul>
-								<li>Web Design</li>
-								<li>Graphic Design</li>
 								<li>Illustration</li>
+								<li>Web Design</li>
+								<li>HTML/CSS</li>
+								<li>Javascript</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
