--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 										<h3>Brighter Future For Gaming</h3>
 										<p>Landing Page</p>
 										<ul class="role-list">
+											<li>Key Visual</li>
 											<li>Web Design</li>
-											<li>HTML/CSS</li>
-											<li>Javascript</li>
+											<li>HTML/CSS/JS</li>
 										</ul>
 									</div>
 								</li>
@@ -169,6 +169,7 @@
 										<h3>2021 MSI Graphics</h3>
 										<p>Web & Print - Assorted</p>
 										<ul class="role-list">
+											<li>Key Visual</li>
 											<li>Graphic Design</li>
 											<li>Photo Manipulation</li>
 										</ul>
@@ -184,7 +185,7 @@
 										<h3>Optix MPG321QRF-QD</h3>
 										<p>Etailer A+ Content</p>
 										<ul class="role-list">
-											<li>Marketing</li>
+											<li>Key Visual</li>
 											<li>Graphic Design</li>
 											<li>Photo Manipulation</li>
 										</ul>
@@ -216,8 +217,7 @@
 										<ul class="role-list">
 											<li>Illustration</li>
 											<li>Web Design</li>
-											<li>HTML/CSS</li>
-											<li>Javascript</li>
+											<li>HTML/CSS/JS</li>
 										</ul>
 									</div>
 								</li>
@@ -249,8 +249,7 @@
 										<p>Charity Collaboration</p>
 										<ul class="role-list">
 											<li>Web Design</li>
-											<li>HTML/CSS</li>
-											<li>Javascript</li>
+											<li>HTML/CSS/JS</li>
 										</ul>
 									</div>
 								</li>
