--- a/work/msi_2021/index.html
+++ b/work/msi_2021/index.html
@@ -55,6 +55,7 @@
 								ROLES
 							</h2>
 							<ul>
+								<li>Key Visual</li>
 								<li>Graphic Design</li>
 								<li>Photo Manipulation</li>
 							</ul>
