--- a/work/msi_brighter_future/index.html
+++ b/work/msi_brighter_future/index.html
@@ -56,9 +56,9 @@
 								ROLES
 							</h2>
 							<ul>
+								<li>Key Visual</li>
 								<li>Web Design</li>
-								<li>HTML/CSS</li>
-								<li>Javascript</li>
+								<li>HTML/CSS/JS</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
@@ -67,9 +67,10 @@
 								Blended Group. I was tasked with designing the key visual and promotion landing page.
 							</p>
 							<p>
-								I composited the various giveaway products on a futuristic skyline backdrop. I created faux reflections
-								for product emphasis as well as to indicate cleanliness. Soft light blues carry a positive
-								tonality that suggest a utopian future.
+								For the key visual, I composited the various giveaway products on a futuristic skyline backdrop.
+								I created faux reflections for product emphasis as well as to indicate cleanliness.
+								After the key visual, I laid out the rest of the promotional page using soft light blues
+								to carry a positive, utopian-future tonality. 
 
 
 							</p>
