--- a/work/msi_optix/index.html
+++ b/work/msi_optix/index.html
@@ -56,7 +56,7 @@
 								ROLES
 							</h2>
 							<ul>
-								<li>Marketing</li>
+								<li>Key Visual</li>
 								<li>Graphic Design</li>
 								<li>Photo Manipulation</li>
 							</ul>
