--- a/work/msi_yuumei/index.html
+++ b/work/msi_yuumei/index.html
@@ -57,8 +57,7 @@
 							</h2>
 							<ul>
 								<li>Web Design</li>
-								<li>HTML/CSS</li>
-								<li>Javascript</li>
+								<li>HTML/CSS/JS</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
