--- a/work/study_play/index.html
+++ b/work/study_play/index.html
@@ -58,8 +58,7 @@
 							<ul>
 								<li>Illustration</li>
 								<li>Web Design</li>
-								<li>HTML/CSS</li>
-								<li>Javascript</li>
+								<li>HTML/CSS/JS</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
