--- a/index.html
+++ b/index.html
@@ -96,6 +96,24 @@
 						</h2>
 						<div class="portfolio-wrap">
 							<ul class="work-list">
+
+								<li class="work-box">
+									<a href="work/shiba">
+										<div class="work-image" style="background-image:url('img/gallery/shiba.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">SHIBA - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>SHIBA</h3>
+										<p>Monster Movie Poster</p>
+										<ul class="role-list">
+											<li>Key Visual</li>
+											<li>Graphic Design</li>
+											<li>3D Composition</li>
+										</ul>
+									</div>
+								</li>
+
+
 								<li class="work-box">
 									<a href="work/msi_brighter_future">
 										<div class="work-image" style="background-image:url('img/gallery/brighter_future.jpg')" aria-hidden="true"></div>
