--- a/work/msi_brand_store/index.html
+++ b/work/msi_brand_store/index.html
@@ -70,12 +70,13 @@
 							</p>
 							<p>
 								The brand store redesign was intended to be an ongoing process, as I collaborated with channel marketers to
-								priortize launching redesigns based on product inventory/demand.
+								prioritize launching redesigns based on product inventory/demand.
 								We took an agile research approach, monitoring store metrics to improve designs in order to improve selling performance.
 								Some page redesigns were delayed to have the launch coordinated with new product releases, minimizing work redundancy.
 							</p>
 							<p>
-								 The home page was the first to be updated, and in the first month saw an +20% improvement in Orders/Views over the previous month. In 6 months, the page saw an average +60% improvement in Orders/Views per month YoY.
+								 The home page was the first to be updated, and in the first month saw an +20% improvement in Orders/Views over the previous month.
+								 In 6 months, the page saw an average +60% improvement in Orders/Views per month YoY.
 
 							</p>
 						</div>
