--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
 							<ul class="work-list">
 
 								<li class="work-box">
+									<a href="work/msi_creator">
+										<div class="work-image" style="background-image:url('img/gallery/msi_creator.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">SHIBA - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>Imagine & Create</h3>
+										<p>Product Marketing Web Design</p>
+										<ul class="role-list">
+											<li>Web Design</li>
+											<li>Visual Design</li>
+											<li>HTML / CSS / JS</li>
+										</ul>
+									</div>
+								</li>
+
+								<li class="work-box">
 									<a href="work/shiba">
 										<div class="work-image" style="background-image:url('img/gallery/shiba.jpg')" aria-hidden="true"></div>
 										<span class="sr-only">SHIBA - Learn More</span>
