added dtoid, removed others

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 								</li>
 
 
-
+								<!--
 								<li class="work-box">
 									<a href="work/msi_rent">
 										<div class="work-image" style="background-image:url('img/gallery/msi_rent.jpg')" aria-hidden="true"></div>
@@ -273,6 +273,8 @@
 										</ul>
 									</div>
 								</li>
+
+
 								<li class="work-box">
 									<a href="work/msi_yuumei">
 										<div class="work-image" style="background-image:url('img/gallery/msi_yuumei.jpg')" aria-hidden="true"></div>
@@ -287,6 +289,10 @@
 										</ul>
 									</div>
 								</li>
+
+								-->
+
+
 								<li class="work-box">
 									<a href="work/reach_brand">
 										<div class="work-image" style="background-image:url('img/gallery/reach.jpg')" aria-hidden="true"></div>
@@ -299,6 +305,22 @@
 											<li>Branding</li>
 											<li>Typography</li>
 											<li>Print Design</li>
+										</ul>
+									</div>
+								</li>
+
+								<li class="work-box">
+									<a href="work/dtoid">
+										<div class="work-image" style="background-image:url('img/gallery/dtoid.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">+1 Str Fitness - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>Destructoid +1 Str Fitness</h3>
+										<p>Content Creation</p>
+										<ul class="role-list">
+											<li>Director</li>
+											<li>Camera Operator</li>
+											<li>Motion Graphics</li>
 										</ul>
 									</div>
 								</li>
