--- a/work/dtoid/index.html
+++ b/work/dtoid/index.html
@@ -66,7 +66,7 @@
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								In 2016, Destructoid writer Zack Furniss reached out to me to help shoot a video game themed parody fitness video.
+								In 2016, Destructoid writer Zack Furniss reached out to me to help shoot a video game themed, parody fitness video.
 								Intended to be a series, the premise was to follow Zack as he explores video game inspired workouts as he tries to achieve his fitness goals.
 								Each episode would feature a different video game and its related workouts. The game featured in this pilot episode is the Nintendo classic, Castlevania.
 
