Add EDF concept

--- a/index.html
+++ b/index.html
@@ -96,11 +96,27 @@
 						</h2>
 						<div class="portfolio-wrap">
 							<ul class="work-list">
+								<li class="work-box">
+									<a href="work/edf">
+										<div class="work-image" style="background-image:url('img/gallery/edf.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">Concept Marketing Web Design - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>Earth Defense Force 5</h3>
+										<p>Web Marketing Concept</p>
+										<ul class="role-list">
+											<li>Visual Design</li>
+											<li>Web Design</li>
+											<li>UI</li>
+										</ul>
+									</div>
+								</li>
+
 
 								<li class="work-box">
 									<a href="work/msi_creator">
 										<div class="work-image" style="background-image:url('img/gallery/msi_creator.jpg')" aria-hidden="true"></div>
-										<span class="sr-only">SHIBA - Learn More</span>
+										<span class="sr-only">Imagine & Create - Learn More</span>
 									</a>
 									<div class="work-info">
 										<h3>Imagine & Create</h3>
