--- a/work/edf/index.html
+++ b/work/edf/index.html
@@ -61,7 +61,7 @@
 							<ul>
 								<li>Visual Design</li>
 								<li>Web Design</li>
-								<li>UI / UX</li>
+								<li>Marketing</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
