--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<ul class="role-list">
 											<li>Visual Design</li>
 											<li>Web Design</li>
-											<li>UI</li>
+											<li>Marketing</li>
 										</ul>
 									</div>
 								</li>
@@ -124,7 +124,7 @@
 										<ul class="role-list">
 											<li>Web Design</li>
 											<li>Visual Design</li>
-											<li>HTML / CSS / JS</li>
+											<li>HTML/CSS/JS</li>
 										</ul>
 									</div>
 								</li>
