--- a/work/edf/index.html
+++ b/work/edf/index.html
@@ -84,7 +84,7 @@
 
 
 					<img src="img/final.jpg" class="center-img" alt="EDF5 Concept Marketing Page " />
-					<img src="img/info.jpg" class="center-img" alt="EDF5 Info Architecture and Wireframe" />
+					<img src="img/info.jpg" class="center-img" alt="EDF5 Information Architecture and Wireframe" />
 					<img src="img/mood.jpg" class="center-img" alt="EDF5 Concept Moodboard" />
 					<img src="img/ui.jpg" class="center-img" alt="EDF5 Concept Text/UI" />
 
