--- a/test/index.html
+++ b/test/index.html
@@ -191,10 +191,10 @@
 
 
 		<!--Hammer-->
-		<script src="../js/hammer-time/hammer-time.min.js"></script>
+		<script src="js/hammer-time/hammer-time.min.js"></script>
 
 		<!--Wow Js-->
-		<script src="../js/wow/wow.min.js"></script>
+		<script src="js/wow/wow.min.js"></script>
 		<script>
 			window.onload = function() 
 			{
@@ -219,7 +219,7 @@
 		
 		
 		<!--Site JS-->
-		<script type="text/javascript" src="../js/site.js"></script>
+		<script type="text/javascript" src="js/site.js"></script>
 
 
 	</body>
