--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta http-equiv="pragma" content="no-cache">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="description" content="Rich Huynh Design">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Rich Huynh - Design</title>
