--- a/test/case/2/index.html
+++ b/test/case/2/index.html
@@ -99,12 +99,6 @@
 
 					<div class="h-line" aria-hidden="true"></div>
 
-					<div class="case-img">
-						<div style="background:red; width:100%; padding-bottom:65%;"></div>
-					</div>
-
-					<div class="h-line" aria-hidden="true"></div>
-
 					<section id="chapter-1" class="case-text">	
 						<h4>Information Architecture:</h4>
 						<p>
@@ -113,7 +107,7 @@
 					</section>
 
 					<div class="case-img">
-						<div style="background:red; width:100%; padding-bottom:65%;"></div>
+						<img src="img/1-1.jpg" alt="ALTTEXT" />
 					</div>
 
 					<div class="h-line" aria-hidden="true"></div>
