--- a/case/1/index.html
+++ b/case/1/index.html
@@ -90,7 +90,7 @@
 						<br /><br />
 						<h4>Process:</h4>
 						<ol>
-							<li><a href="#chapter-analysis" class="case-chapter">Analysis & Competitive Research</a></li>	
+							<li><a href="#chapter-analysis" class="case-chapter">Comparative Analysis</a></li>	
 							<li><a href="#chapter-branding" class="case-chapter">Slogan & Branding</a></li>								
 							<li><a href="#chapter-info" class="case-chapter">Information Architecture</a></li>	
 							<li><a href="#chapter-wireframe" class="case-chapter">Low-Fidelity Wireframe</a></li>					
@@ -104,7 +104,7 @@
 					<div class="h-line" aria-hidden="true"></div>
 
 					<section id="chapter-analysis" class="case-text">	
-						<h4>Analysis & Competitive Research:</h4>
+						<h4>Comparative Analysis:</h4>
 						<p>
 							I worked with a channel marketer to perform a creative audit of the existing store design. We identified the store lacked compelling content, identifiable call-to-actions, and style/typographic consistency. Content also needed to be rearranged to accommodate for the inclusion of new product categories.							
 						</p>
