--- a/case/1/index.html
+++ b/case/1/index.html
@@ -75,7 +75,7 @@
 							Improving Sales by Visually Redesigning the Brand-Store Shopping Experience
 						</h2>
 						<h3>							
-							Visual Design, Product Marketing, Copywriting
+							Visual Design, Interaction Design, Brand Marketing
 						</h3>
 					</section>
 					
