--- a/case/2/index.html
+++ b/case/2/index.html
@@ -75,7 +75,7 @@
 							Audience-Focused Web Design for Product Marketing
 						</h2>
 						<h3>							
-							Web Design, Graphic Design, Product Marketing
+							Web Design, Content Design, Front-End Development
 						</h3>
 					</section>
 					
