--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 				
 				<div class="inner">
 					<div id="scroll-line" aria-hidden="false" class="animate__animated animate__fadeIn animate__delay-1s animate__slow"></div>
-					<ul id="case-list" class="even-list">					
+					<ul id="case-list" class="even-list">		
+		
 						<li>
 							<div class="case-info wow animate__fadeIn" data-wow-duration="1s">
 								<div class="info-inner">
@@ -82,7 +83,7 @@
 										Web Design for Product Marketing									
 									</h4>
 									<h5>
-										Web Design, Interaction Design, Front-End Development
+										Web Design, Content Design, Front-End Development
 								   </h5>
 									<a href="case/2">View Case 
 									</a>
@@ -104,7 +105,7 @@
 										Improving Sales by Visually Redesigning the Brand-Store Shopping Experience
 									</h4>
 									<h5>
-										Visual Design, Product Marketing, Copywriting
+										Visual Design, Interaction Design, Brand Marketing
 									</h5>
 									<a href="case/1">View Case 
 									</a>
