--- a/case/2/index.html
+++ b/case/2/index.html
@@ -134,7 +134,7 @@
 					</section>				
 
 					<div class="case-img">
-						<img src="img/visuals.jpg" alt="Low-Fidelity Wireframe." />
+						<img src="img/visuals.jpg" alt="Style Guide and various graphics." />
 					</div>
 
 					<div class="h-line" aria-hidden="true"></div>
@@ -160,7 +160,7 @@
 					</section>
 
 					<div class="case-img">
-						<img src="img/full.jpg" alt="ALTTEXT" />
+						<img src="img/full.jpg" alt="Full Page design displayed on laptop and mobile." />
 					</div>
 
 
