Update Case 1, Add Case 3

--- a/case/3/index.html
+++ b/case/3/index.html
@@ -147,7 +147,7 @@
 							Referring to the user flow diagram, I identified the three main views for the input-mapping journey: Device/Profile Selection, Device Input Selection/Overview, and Input Map Editor. I wireframed these views, selectively using aspects of reWASD to improve the interfaces of JoyToKey. 
 							I also wireframed to the user flow diagram's decision components into the and alert prompts that would be present throughout the journey. 
 						</p>
-					</section>		
+					</section>	
 
 					<div class="case-img">
 						<img src="img/wireframe.jpg" alt="Low Fidelity Wireframes." />
@@ -158,13 +158,18 @@
 					<section id="chapter-style" class="case-text">	
 						<h4>Style Guide:</h4>
 						<p>
-							With a pre-established audience of gamers, I sought to redesign the UI with a more modern, gaming aesthetic. I drafted a list of some of the currently most-watched games on Twitch and compiled some of their user interfaces into a mood board.
+							With a pre-established audience of gamers, I sought to redesign the UI with a more modern, gaming aesthetic. 
+							I drafted a list of some popular games and gaming tools and compiled some of their user interfaces into a mood board.
 							I identified some of the common characteristics: Dark gradient backgrounds, simple geometric UI elements, white sans-serif text, and monochromatic accents.
 						</p>
 					</section>		
-
+					
 					<div class="case-img">
 						<img src="img/moodboard.jpg" alt="Moodboard of gaming UI." />
+					</div>
+
+					<div class="case-img">
+						<img src="img/style.jpg" alt="Style Guide." />
 					</div>
 
 					<div class="h-line" aria-hidden="true"></div>
