--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 					<h1>
 						<span>Visual Storytelling</span>
 						<span>and Problem Solving</span>
-						<span>with UI/UX Design and</span>
-						<span>Creative Technology.</span>
+						<span>with UI/UX Design</span>
 					</h1>
 				</div>	
 			</section>
@@ -70,7 +69,29 @@
 				
 				<div class="inner">
 					<div id="scroll-line" aria-hidden="false" class="animate__animated animate__fadeIn animate__delay-1s animate__slow"></div>
-					<ul id="case-list" class="even-list">		
+					<ul id="case-list" class="odd-list">	
+						<li>
+							<div class="case-info wow animate__fadeIn" data-wow-duration="1s">
+								<div class="info-inner">
+									<h3>
+										03: Concept - JoyToKey GUI Redesign
+									</h3>
+									<h4>
+										Improving Function and Aesthetic of Gamepad Input-Mapping Software
+									</h4>
+									<h5>
+										Visual Design, Interaction Design
+								   </h5>
+									<a href="case/3">View Case 
+									</a>
+								</div>
+							</div>
+							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/3">
+								<div class="img-wrap">
+									<img src="img/case-3.jpg" alt="Software UI." />
+								</div>		
+							</a>
+						</li>	
 		
 						<li>
 							<div class="case-info wow animate__fadeIn" data-wow-duration="1s">
@@ -91,7 +112,7 @@
 							</div>
 							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/2">
 								<div class="img-wrap">
-									<img src="img/case-2.jpg" alt="ALTTEXT" />
+									<img src="img/case-2.jpg" alt="Website Design on Laptop and Mobile." />
 								</div>		
 							</a>
 						</li>
@@ -113,7 +134,7 @@
 							</div>
 							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/1">
 								<div class="img-wrap">
-									<img src="img/case-1.jpg" alt="ALTTEXT" />
+									<img src="img/case-1.jpg" alt="Brand Store Design on Laptop." />
 								</div>			
 							</a>
 						</li>
