--- a/case/1/index.html
+++ b/case/1/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="Rich Huynh Design">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Rich Huynh - Design</title>
+		<title>Rich Huynh | Design | Case 01</title>
+		<meta name="description" content="Improving Sales by Visually Redesigning the Brand-Store Shopping Experience">	
 		<link rel="shortcut icon" type="image/jpg" href="../../img/rh-favicon.png"/>
 
 		<link type="text/css" rel="stylesheet" href="../../css/style.css" />
