--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="Rich Huynh Design">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Rich Huynh - Design</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Rich Huynh | Design</title>
+		<meta name="description" content="UI/UX Design and Creative Technology : Visual Storytelling and Problem Solving">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">				
 		<link rel="shortcut icon" type="image/jpg" href="img/rh-favicon.png"/>
 
 		<link type="text/css" rel="stylesheet" href="css/style.css" />
-
+		
+		
 
 		<!--Animate Css-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -54,9 +56,14 @@
 			<section id="hero">
 				<div class="inner">
 					<h1>
-						<span>Visual Storytelling</span>
-						<span>and Problem Solving</span>
-						<span>with UI/UX Design</span>
+						
+						
+						<b>
+							<span> UI/UX Design and</span>
+							<span>Creative Technology</span>
+						</b>
+							<span>Visual Storytelling</span>
+							<span>and Problem Solving</span>
 					</h1>
 				</div>	
 			</section>
@@ -70,6 +77,31 @@
 				<div class="inner">
 					<div id="scroll-line" aria-hidden="false" class="animate__animated animate__fadeIn animate__delay-1s animate__slow"></div>
 					<ul id="case-list" class="odd-list">	
+<!-- 
+						<li>
+							<div class="case-info wow animate__fadeIn" data-wow-duration="1s">
+								<div class="info-inner">
+									<h3>
+										04: MSI - Deal Content Production Tool
+									</h3>
+									<h4>
+										Improving Content Production Workflow with API-Driven Automation
+									</h4>
+									<h5>
+										UX Design, Web Design, Web Development
+								   </h5>
+									<span class="case-link inactive">Under Construction 
+									</span>
+								</div>
+							</div>
+							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/3">
+								<div class="img-wrap">
+									<img src="img/case-4.jpg" alt="Software UI." />
+								</div>		
+							</a>
+						</li>	 -->
+
+
 						<li>
 							<div class="case-info wow animate__fadeIn" data-wow-duration="1s">
 								<div class="info-inner">
@@ -82,13 +114,13 @@
 									<h5>
 										Visual Design, Interaction Design
 								   </h5>
-									<a href="case/3">View Case 
+									<a class="case-link" href="case/3">View Case 
 									</a>
 								</div>
 							</div>
 							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/3">
 								<div class="img-wrap">
-									<img src="img/case-3.jpg" alt="Software UI." />
+									<img src="img/case-3.jpg" alt="JoyToKey Software UI." />
 								</div>		
 							</a>
 						</li>	
@@ -106,7 +138,7 @@
 									<h5>
 										Web Design, Content Design, Front-End Development
 								   </h5>
-									<a href="case/2">View Case 
+									<a class="case-link" href="case/2">View Case 
 									</a>
 								</div>
 							</div>
@@ -128,7 +160,7 @@
 									<h5>
 										Visual Design, Interaction Design, Brand Marketing
 									</h5>
-									<a href="case/1">View Case 
+									<a class="case-link" href="case/1">View Case 
 									</a>
 								</div>
 							</div>
