add roles, revise context

--- a/case/2/index.html
+++ b/case/2/index.html
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex">
 		<title>Rich Huynh | Design | Case 02</title>
 		<meta name="description" content="Audience-Focused Web Design for Product Marketing">	
-		<link rel="shortcut icon" type="image/jpg" href="../../img/rh-favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="/img/rh-favicon.png"/>
 
-		<link type="text/css" rel="stylesheet" href="../../css/style.css" />
+		<link type="text/css" rel="stylesheet" href="/css/style.css" />
+		
 
 
 		<!--Animate Css-->
@@ -56,7 +58,7 @@
 			<main id="case-container">
 				<ul class="breadcrumbs">
 					<li>
-						<a class="topnav-link" href="/index.html">Work</a>
+						<a class="topnav-link" href="/">Work</a>
 					</li>
 					<li>
 						Case 02
@@ -76,7 +78,7 @@
 							Audience-Focused Web Design for Product Marketing
 						</h2>
 						<h3>							
-							Web Design, Content Design, Front-End Development
+							Web Design, Visual Storytelling
 						</h3>
 					</section>
 					
@@ -86,6 +88,12 @@
 						<h4>Objective:</h4>
 						<p>
 							I was tasked with designing a marketing landing page for MSI Creator Products. The primary objective was to drive click-throughs to product shopping pages and use influencer videos and product feature information as supporting content. I also had to include an events calender in the page.
+						</p>
+						<br /><br />
+						<h4>Role:</h4>
+						<p>
+							Web Designer<br />
+							Web Developer
 						</p>
 						<br /><br />
 						<h4>Process:</h4>
@@ -192,10 +200,10 @@
 
 
 		<!--Hammer-->
-		<script src="../../js/hammer-time/hammer-time.min.js"></script>
+		<script src="/js/hammer-time/hammer-time.min.js"></script>
 
 		<!--Wow Js-->
-		<script src="../../js/wow/wow.min.js"></script>
+		<script src="/js/wow/wow.min.js"></script>
 		<script>
 			window.onload = function() 
 			{
@@ -220,6 +228,6 @@
 		
 		
 		<!--Site JS-->
-		<script type="text/javascript" src="../../js/site.js"></script>
+		<script type="text/javascript" src="/js/site.js"></script>
 	</body>
 </html>
