--- a/case/1/index.html
+++ b/case/1/index.html
@@ -4,11 +4,12 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex">
 		<title>Rich Huynh | Design | Case 01</title>
 		<meta name="description" content="Improving Sales by Visually Redesigning the Brand-Store Shopping Experience">	
-		<link rel="shortcut icon" type="image/jpg" href="../../img/rh-favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="/img/rh-favicon.png"/>
 
-		<link type="text/css" rel="stylesheet" href="../../css/style.css" />
+		<link type="text/css" rel="stylesheet" href="/css/style.css" />
 
 
 		<!--Animate Css-->
@@ -56,7 +57,7 @@
 			<main id="case-container">
 				<ul class="breadcrumbs">
 					<li>
-						<a class="topnav-link" href="/index.html">Work</a>
+						<a class="topnav-link" href="/">Work</a>
 					</li>
 					<li>
 						Case 01
@@ -76,7 +77,7 @@
 							Improving Sales by Visually Redesigning the Brand-Store Shopping Experience
 						</h2>
 						<h3>							
-							Visual Design, Interaction Design, Brand Marketing
+							Visual Design, Brand Marketing
 						</h3>
 					</section>
 					
@@ -87,6 +88,12 @@
 						<p>
 							After observing the increased importance of brand presence in web channel markets as consumers adapt to shopping online, I initiated an effort to refresh the MSI Brand Store on Amazon. 
 							The goal was to improve sales by visually redesigning the brand store and to add recently introduced product categories.
+						</p>
+						<br /><br />
+						<h4>Role:</h4>
+						<p>
+							Project Lead<br />
+							Visual Designer
 						</p>
 						<br /><br />
 						<h4>Process:</h4>
@@ -283,10 +290,10 @@
 
 
 		<!--Hammer-->
-		<script src="../../js/hammer-time/hammer-time.min.js"></script>
+		<script src="/js/hammer-time/hammer-time.min.js"></script>
 
 		<!--Wow Js-->
-		<script src="../../js/wow/wow.min.js"></script>
+		<script src="/js/wow/wow.min.js"></script>
 		<script>
 			window.onload = function() 
 			{
@@ -308,9 +315,11 @@
 			wow.init();
 		</script>
 
+		<!--SJCL-->
+		<script src="/js/sjcl/sjcl.js"></script>
 		
 		
 		<!--Site JS-->
-		<script type="text/javascript" src="../../js/site.js"></script>
+		<script type="text/javascript" src="/js/site.js"></script>
 	</body>
 </html>
