--- a/case/3/index.html
+++ b/case/3/index.html
@@ -4,11 +4,12 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex">
 		<title>Rich Huynh | Design | Case 03</title>
 		<meta name="description" content="Improving Function and Aesthetic of Gamepad Input-Mapping Software">								
-		<link rel="shortcut icon" type="image/jpg" href="../../img/rh-favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="/img/rh-favicon.png"/>
 
-		<link type="text/css" rel="stylesheet" href="../../css/style.css" />
+		<link type="text/css" rel="stylesheet" href="/css/style.css" />
 
 
 		<!--Animate Css-->
@@ -56,7 +57,7 @@
 			<main id="case-container">
 				<ul class="breadcrumbs">
 					<li>
-						<a class="topnav-link" href="/index.html">Work</a>
+						<a class="topnav-link" href="/">Work</a>
 					</li>
 					<li>
 						Case 03
@@ -76,7 +77,7 @@
 							Improving Function and Aesthetic of Gamepad Input-Mapping Software
 						</h2>
 						<h3>							
-							Visual Design, Interaction Design
+							UI Design, User Flow
 						</h3>
 					</section>
 					
@@ -87,8 +88,11 @@
 						<p>
 							JoyToKey is a shareware program that allows users to bind keyboard inputs to a gamepad. The software has been around for at least ten years and has made very few changes in UI. As a personal challenge, I attempted to modernize the UI's visual style and improve its usability.
 						</p>
-
-
+						<br /><br />
+						<h4>Role:</h4>
+						<p>
+							UI/UX Designer
+						</p>
 						<br /><br />
 						<h4>Process:</h4>
 						<ol>
@@ -214,10 +218,10 @@
 
 
 		<!--Hammer-->
-		<script src="../../js/hammer-time/hammer-time.min.js"></script>
+		<script src="/js/hammer-time/hammer-time.min.js"></script>
 
 		<!--Wow Js-->
-		<script src="../../js/wow/wow.min.js"></script>
+		<script src="/js/wow/wow.min.js"></script>
 		<script>
 			window.onload = function() 
 			{
@@ -242,6 +246,6 @@
 		
 		
 		<!--Site JS-->
-		<script type="text/javascript" src="../../js/site.js"></script>
+		<script type="text/javascript" src="/js/site.js"></script>
 	</body>
 </html>
