--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<title>Rich Huynh | Design</title>
 		<meta name="description" content="UI/UX Design and Creative Technology : Visual Storytelling and Problem Solving">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">				
-		<link rel="shortcut icon" type="image/jpg" href="img/rh-favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="/img/rh-favicon.png"/>
 
-		<link type="text/css" rel="stylesheet" href="css/style.css" />
+		<link type="text/css" rel="stylesheet" href="/css/style.css" />
 		
 		
 
@@ -77,8 +77,8 @@
 				<div class="inner">
 					<div id="scroll-line" aria-hidden="false" class="animate__animated animate__fadeIn animate__delay-1s animate__slow"></div>
 					<ul id="case-list" class="odd-list">	
-<!-- 
-						<li>
+
+						<!-- <li>
 							<div class="case-info wow animate__fadeIn" data-wow-duration="1s">
 								<div class="info-inner">
 									<h3>
@@ -88,7 +88,7 @@
 										Improving Content Production Workflow with API-Driven Automation
 									</h4>
 									<h5>
-										UX Design, Web Design, Web Development
+										UI/UX Design, Front-End Engineering, Rapid Iteration
 								   </h5>
 									<span class="case-link inactive">Under Construction 
 									</span>
@@ -99,7 +99,7 @@
 									<img src="img/case-4.jpg" alt="Software UI." />
 								</div>		
 							</a>
-						</li>	 -->
+						</li> -->
 
 
 						<li>
@@ -112,13 +112,13 @@
 										Improving Function and Aesthetic of Gamepad Input-Mapping Software
 									</h4>
 									<h5>
-										Visual Design, Interaction Design
+										UI Design, User Flow
 								   </h5>
-									<a class="case-link" href="case/3">View Case 
+									<a class="case-link" href="/case/3/">View Case 
 									</a>
 								</div>
 							</div>
-							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/3">
+							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="/case/3/">
 								<div class="img-wrap">
 									<img src="img/case-3.jpg" alt="JoyToKey Software UI." />
 								</div>		
@@ -136,13 +136,13 @@
 										Web Design for Product Marketing									
 									</h4>
 									<h5>
-										Web Design, Content Design, Front-End Development
+										Web Design, Visual Storytelling
 								   </h5>
-									<a class="case-link" href="case/2">View Case 
+									<a class="case-link" href="/case/2/">View Case 
 									</a>
 								</div>
 							</div>
-							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/2">
+							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="/case/2/">
 								<div class="img-wrap">
 									<img src="img/case-2.jpg" alt="Website Design on Laptop and Mobile." />
 								</div>		
@@ -158,13 +158,13 @@
 										Improving Sales by Visually Redesigning the Brand-Store Shopping Experience
 									</h4>
 									<h5>
-										Visual Design, Interaction Design, Brand Marketing
+										Visual Design, Brand Marketing
 									</h5>
-									<a class="case-link" href="case/1">View Case 
+									<a class="case-link" href="/case/1/">View Case 
 									</a>
 								</div>
 							</div>
-							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="case/1">
+							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="/case/1/">
 								<div class="img-wrap">
 									<img src="img/case-1.jpg" alt="Brand Store Design on Laptop." />
 								</div>			
@@ -204,17 +204,17 @@
 
 
 		<!--Hammer-->
-		<script src="js/hammer-time/hammer-time.min.js"></script>
+		<script src="/js/hammer-time/hammer-time.min.js"></script>
 
 		<!--Wow Js-->
-		<script src="js/wow/wow.min.js"></script>
+		<script src="/js/wow/wow.min.js"></script>
 		<script>
 			window.onload = function() 
 			{
 				var elements = document.getElementsByClassName("offsetMe");
 				var i;
 				for (i = 0; i < elements.length; i++) {
-					var offset = elements[i].clientHeight * .35; 
+					var offset = elements[i].clientHeight * .25; 
 					elements[i].setAttribute("data-wow-offset", offset);
 				}
 			}
@@ -229,11 +229,11 @@
 			wow.init();
 		</script>
 
+		<!--SJCL-->
+		<script src="/js/sjcl/sjcl.js"></script>
 		
 		
 		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
-
-
+		<script type="text/javascript" src="/js/site.js"></script>
 	</body>
 </html>
