fix anchor and prep links

--- a/case/1/index.html
+++ b/case/1/index.html
@@ -47,7 +47,7 @@
 						</li>
 						-->
 						<li>
-							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh">LinkedIn</a>
+							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh" data-pw-exclude="true">LinkedIn</a>
 						</li>
 					</ul>
 				</nav>
@@ -97,7 +97,7 @@
 						</p>
 						<br /><br />
 						<h4>Process:</h4>
-						<ol>
+						<ol class="section-list" data-pw-exclude="true">
 							<li><a href="#chapter-analysis" class="case-chapter">Comparative Analysis</a></li>	
 							<li><a href="#chapter-branding" class="case-chapter">Slogan & Branding</a></li>								
 							<li><a href="#chapter-info" class="case-chapter">Information Architecture</a></li>	
