--- a/case/3/index.html
+++ b/case/3/index.html
@@ -47,7 +47,7 @@
 						</li>
 						-->
 						<li>
-							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh">LinkedIn</a>
+							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh" data-pw-exclude="true">LinkedIn</a>
 						</li>
 					</ul>
 				</nav>
@@ -95,7 +95,7 @@
 						</p>
 						<br /><br />
 						<h4>Process:</h4>
-						<ol>
+						<ol class="section-list" data-pw-exclude="true">
 							<li><a href="#chapter-analysis" class="case-chapter">Comparative Analysis</a></li>						
 							<li><a href="#chapter-userflow" class="case-chapter">User Flow Diagram</a></li>
 							<li><a href="#chapter-wireframe" class="case-chapter">Low-Fidelity Wireframe</a></li>
@@ -107,7 +107,7 @@
 
 					<div class="h-line" aria-hidden="true"></div>
 
-					<section id="chapter-info" class="case-text">	
+					<section id="chapter-analysis" class="case-text">	
 						<h4>Comparative Analysis:</h4>
 						<p>
 							JoyToKey uses an older Windows-looking GUID that doesn't do much to guide the user through the input mapping journey. My initial impression when opening the software was confusion as the menus weren't intuitive and didn't say which device was active. The long list of inputs on the right could have been a useful overview, but it was filled with extra, unused inputs that added to the initial sense of confusion.
@@ -179,7 +179,7 @@
 
 					<div class="h-line" aria-hidden="true"></div>
 
-					<section id="chapter-prototype" class="case-text">	
+					<section id="chapter-mockup" class="case-text">	
 						<h4>High-Fidelity Mockup:</h4>
 						<p>
 							After establishing the visual design, I applied it to the wireframed views to create high-fidelity mockups. I kept a neutral color palette for menus and used a dark gradient background to create higher contrast on focused elements. I applied open-source iconography from IBM's Carbon Design System to streamline the mockup process.							
