--- a/case/2/index.html
+++ b/case/2/index.html
@@ -48,7 +48,7 @@
 						</li>
 						-->
 						<li>
-							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh">LinkedIn</a>
+							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh" data-pw-exclude="true">LinkedIn</a>
 						</li>
 					</ul>
 				</nav>
@@ -97,7 +97,7 @@
 						</p>
 						<br /><br />
 						<h4>Process:</h4>
-						<ol>
+						<ol class="section-list" data-pw-exclude="true">
 							<li><a href="#chapter-info" class="case-chapter">Information Architecture</a></li>
 							<li><a href="#chapter-wireframe" class="case-chapter">Low-Fidelity Wireframe</a></li>
 							<li><a href="#chapter-visuals" class="case-chapter">Visual Design & Copy Direction</a></li>
