password cookie function and cleanup

--- a/index.html
+++ b/index.html
@@ -229,9 +229,12 @@
 			wow.init();
 		</script>
 
+		<!--jsCookie-->
+		<script src="/js/js-cookie/js.cookie.min.js"></script>
+
 		<!--SJCL & PW-->
-		<!-- <script type="text/javascript" src="/js/sjcl/sjcl.js"></script>
-		<script type="text/javascript" src="/js/pw.js"></script> -->
+		<script type="text/javascript" src="/js/sjcl/sjcl.js"></script>
+		<script type="text/javascript" src="/js/pw.js"></script>
 		
 		
 		<!--Site JS-->
