--- a/index.html
+++ b/index.html
@@ -93,14 +93,18 @@
 										UI/UX Design, Front-End Engineering, Rapid Iteration
 								   </h5>
 									<a class="case-link" data-case-locked="true" data-case-id="4">
-										<img src="img/locked.svg" />										
-										Password Required
+										<img src="img/locked.svg" alt="Locked Icon" />										
+										Login | View Case
 									</a>
 								</div>
 							</div>
 							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" data-case-locked="true" data-case-id="4" >
 								<div class="img-wrap">
-									<img src="img/case-2.jpg" alt="Software UI." />
+									<div class="password-required">
+										<img src="img/locked.svg" alt="Locked Icon" />
+										Password Required
+									</div>
+									<img class="case-img" src="img/case-2.jpg" alt="Software UI." />
 								</div>		
 							</a>
 						</li> -->
@@ -124,7 +128,7 @@
 							</div>
 							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="/case/3/">
 								<div class="img-wrap">
-									<img src="img/case-3.jpg" alt="JoyToKey Software UI." />
+									<img class="case-img" src="img/case-3.jpg" alt="JoyToKey Software UI." />
 								</div>		
 							</a>
 						</li>	
@@ -148,7 +152,7 @@
 							</div>
 							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="/case/2/">
 								<div class="img-wrap">
-									<img src="img/case-2.jpg" alt="Website Design on Laptop and Mobile." />
+									<img class="case-img" src="img/case-2.jpg" alt="Website Design on Laptop and Mobile." />
 								</div>		
 							</a>
 						</li>
@@ -170,7 +174,7 @@
 							</div>
 							<a class="case-img wow animate__fadeIn offsetMe" data-wow-duration="1s" href="/case/1/">
 								<div class="img-wrap">
-									<img src="img/case-1.jpg" alt="Brand Store Design on Laptop." />
+									<img class="case-img" src="img/case-1.jpg" alt="Brand Store Design on Laptop." />
 								</div>			
 							</a>
 						</li>
@@ -205,6 +209,9 @@
 		<!--JQuery-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+		<!--JQuery UI-->
+		<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
 
 
 		<!--Hammer-->
