--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -102,12 +102,12 @@
 						<br /><br />
 						<h4>Process:</h4>
 						<ol class="section-list" data-pw-exclude="true">
-							<li><a href="#chapter-analysis" class="case-chapter">Background</a></li>						
-							<li><a href="#chapter-userflow" class="case-chapter">Objectives</a></li>
-							<li><a href="#chapter-wireframe" class="case-chapter">Low-Fidelity Wireframe</a></li>
-							
-							<li><a href="#chapter-style" class="case-chapter">Style Guide</a></li>
-							<li><a href="#chapter-mockup" class="case-chapter">High-Fidelity Mockup</a></li>
+							<li><a href="#chapter-challenges" class="case-chapter">Challenges</a></li>						
+							<li><a href="#chapter-objectives" class="case-chapter">Objectives</a></li>
+							<li><a href="#chapter-iteration-1" class="case-chapter">1st Iteration (Week 1)</a></li>
+							<li><a href="#chapter-iteration-2" class="case-chapter">2nd Iteration (Week 2)</a></li>
+							<li><a href="#chapter-iteration-3" class="case-chapter">3rd Iteration (Week 3 & 4)</a></li>
+							<li><a href="#chapter-iteration-4" class="case-chapter">4th Iteration (Week 5)</a></li>
 						</ol>
 					</section>
 
@@ -158,7 +158,7 @@
 
 					generic deals -> summer deals -> Back to school -->
 					<section id="chapter-userflow" class="case-text">	
-						<h4>(Week 1) - 1st iteration:</h4>
+						<h4>1st Iteration (Week 1):</h4>
 						<h5>
 							Consumer-Facing Site - Initial Redesign
 						</h5>
@@ -188,7 +188,7 @@
 							<li>
 								<b>Initiated the creation of product image library.</b>
 								<p>
-									The method would improve production in the future, but still required designers to manually create product images for the time being. 
+									The method would improve production in the future, but still required designers to manually create product images. 
 								</p>
 							</li>
 						</ul>
@@ -200,7 +200,7 @@
 					<div class="h-line" aria-hidden="true"></div>			
 
 					<section id="chapter-userflow" class="case-text">	
-						<h4>(Week 2) - 2nd iteration:</h4>
+						<h4>2nd Iteration (Week 2):</h4>
 						<h5>
 							Hatch - Where To Buy Solution
 						</h5>
@@ -295,7 +295,10 @@
 							</li>
 							<li>
 								<b>Custom-Link Unpredictability</b>
-								<p>Some of the [Shop Now] buttons linked directly to retailers while others displayed the Hatch popup menu, creating a disorienting and unpredictable experience.</p>
+								<p>
+									As a result of Hatch not listing some specific promotions, I created a "custom-link" workaround to give marketers the ability to link the "Shop Now" button directly to retailers.
+                                    However, this created an unpredictable experience when some of the "Shop Now" buttons linked directly while others displayed the Hatch popup menu.
+								</p>
 							</li>
 						</ul>
 					</section>
@@ -303,7 +306,7 @@
 					<div class="h-line" aria-hidden="true"></div>	
 
 					<section id="chapter-userflow" class="case-text">	
-						<h4>(Week 3 & 4) - 3rd iteration:</h4>
+						<h4>3rd Iteration (Week 3 & 4):</h4>
 						<h5>
 							Hatch - API Solution
 						</h5>
@@ -349,7 +352,7 @@
 					<div class="h-line" aria-hidden="true"></div>	
 
 					<section id="chapter-userflow" class="case-text">	
-						<h4>(Week 5) - 4th iteration:</h4>
+						<h4>4th iteration (Week 5):</h4>
 						<h5>
 							New Campaign Launch - UI Update
 						</h5>
